<resources>
    <string name="app_name">RetrofitTaskManager</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="or">Or</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="task_description">Task description</string>
    <string name="add">Add</string>
</resources>
